# OpenCVTemplate

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
